[package]
name = "mpc"
version = "0.1.0"
edition = "2021"
authors = ["Abhishek Kumar <mr.kumar.abhishek@outlook.in>"]
license = "MIT"
description = "A lightweight and powerful Parser Combinator library for Rust"
repository = "https://github.com/yourusername/mpc-rs"  # Update with actual repo

[lib]
name = "mpc"
path = "src/lib.rs"

[[bin]]
name = "simple_test"
path = "examples/simple_test.rs"
